--- a/index.html
+++ b/index.html
@@ -118,73 +118,73 @@
 
     <div class="block block-header">
         <div class="profile-image-wrapper">
-            <img src="https://i.imgur.com/nQ1gZDJ.png" alt="Profile Picture" class="profile-image">
+            <img src="profileimg.jpg" alt="Profile Picture" class="profile-image">
         </div>
     </div>
 
     <div class="block block-info">
-        [cite_start]<p class="name">SHENG-GANG HUANG [cite: 1]</p>
-        [cite_start]<p class="personal-details">出生:1999/12/23(26歲) 兵役:役畢 [cite: 2]</p>
+        <p class="name">SHENG-GANG HUANG</p>
+        <p class="personal-details">出生:1999/12/23</p>
     </div>
 
     <div class="block">
-        [cite_start]<h2 class="section-title">Education [cite: 3]</h2>
+        <h2 class="section-title">Education</h2>
         <ul>
             <li>
-                [cite_start]<div class="item-primary">國立台北大學 [cite: 4]</div>
-                <div class="item-secondary">經濟學系 | [cite_start]2018-2022 [cite: 5]</div>
+                <div class="item-primary">國立台北大學</div>
+                <div class="item-secondary">經濟學系 | 2018-2022</div>
             </li>
             <li>
-                [cite_start]<div class="item-primary">新北市立淡水商工 [cite: 6]</div>
-                <div class="item-secondary">資料處理科 | [cite_start]2015-2018 [cite: 7]</div>
+                <div class="item-primary">新北市立淡水商工</div>
+                <div class="item-secondary">資料處理科 | 2015-2018</div>
             </li>
         </ul>
     </div>
 
     <div class="block">
-        [cite_start]<h2 class="section-title">Work Experience [cite: 8]</h2>
+        <h2 class="section-title">Work Experience</h2>
         <ul>
             <li>
-                [cite_start]<div class="item-primary">行銷美編 [cite: 9]</div>
-                <div class="item-secondary">台灣諾得股份有限公司 | [cite_start]2024.07-2025.07(預計) [cite: 10]</div>
+                <div class="item-primary">行銷美編</div>
+                <div class="item-secondary">台灣諾得股份有限公司 | 2024.07-2025.07(預計)</div>
             </li>
             <li>
-                [cite_start]<div class="item-primary">行銷企劃 [cite: 11]</div>
-                <div class="item-secondary">財團法人中衛發展中心 | [cite_start]2024.03-2024.07 [cite: 12]</div>
+                <div class="item-primary">行銷企劃</div>
+                <div class="item-secondary">財團法人中衛發展中心 | 2024.03-2024.07</div>
             </li>
             <li>
-                [cite_start]<div class="item-primary">法務助理管理員 [cite: 13]</div>
-                <div class="item-secondary">華碩電腦股份有限公司 | [cite_start]2023.02-2023.06 [cite: 14]</div>
+                <div class="item-primary">法務助理管理員</div>
+                <div class="item-secondary">華碩電腦股份有限公司 | 2023.02-2023.06</div>
             </li>
              <li>
-                [cite_start]<div class="item-primary">資訊工程師 [cite: 15]</div>
-                <div class="item-secondary">台灣增輝藝品有限公司 | [cite_start]2021.04-2022.07 [cite: 16]</div>
+                <div class="item-primary">資訊工程師</div>
+                <div class="item-secondary">台灣增輝藝品有限公司 | 2021.04-2022.07</div>
             </li>
              <li>
-                [cite_start]<div class="item-primary">法務助理管理員 [cite: 17]</div>
-                <div class="item-secondary">華碩電腦股份有限公司 | [cite_start]2019.07-2021.02 [cite: 18]</div>
+                <div class="item-primary">法務助理管理員</div>
+                <div class="item-secondary">華碩電腦股份有限公司 | 2019.07-2021.02</div>
             </li>
         </ul>
     </div>
 
     <div class="block">
-        [cite_start]<h2 class="section-title">Certificate [cite: 20]</h2>
+        <h2 class="section-title">Certificate</h2>
         <ul class="certificates-list">
-            [cite_start]<li>電腦軟體應用(丙級) [cite: 21]</li>
-            [cite_start]<li>ISO-14064 [cite: 22]</li>
-            [cite_start]<li>ISO-14067 [cite: 23]</li>
-            [cite_start]<li>Google Analytics(分析) [cite: 24]</li>
-            [cite_start]<li>信託業務員 [cite: 25]</li>
-            [cite_start]<li>投信投顧法規(乙科) [cite: 26]</li>
-            [cite_start]<li>金融常識道德 [cite: 27]</li>
-            [cite_start]<li>TQC-WORD [cite: 28]</li>
-            [cite_start]<li>TQC-Powerpoint [cite: 29]</li>
+            <li>電腦軟體應用(丙級)</li>
+            <li>ISO-14064</li>
+            <li>ISO-14067</li>
+            <li>Google Analytics(分析)</li>
+            <li>信託業務員</li>
+            <li>投信投顧法規(乙科)</li>
+            <li>金融常識道德</li>
+            <li>TQC-WORD</li>
+            <li>TQC-Powerpoint</li>
         </ul>
     </div>
 
     <div class="block">
         <h2 class="section-title">Portfolio</h2>
-        [cite_start]<p>NONE [cite: 19]</p>
+        <p>NONE</p>
     </div>
 
 </div>
