--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
+        object-position: 50% 20%; /* 這裡就是調整圖片位置的關鍵 */
     }
 
     /* 姓名和個人資訊區塊 */
@@ -184,7 +185,7 @@
 
     <div class="block">
         <h2 class="section-title">Portfolio</h2>
-        <p>NONE</p>
+        <p>In the process of being updated</p>
     </div>
 
 </div>
