--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>SHENG-GANG HUANG - Resume</title>
+<title>SHENG-GANG HUANG</title>
 <style>
     /* 基本設定 */
     body {
@@ -147,7 +147,7 @@
         <ul>
             <li>
                 <div class="item-primary">行銷美編</div>
-                <div class="item-secondary">台灣諾得股份有限公司 | 2024.07-2025.07(預計)</div>
+                <div class="item-secondary">台灣諾得股份有限公司 | 2024.07-2025.07</div>
             </li>
             <li>
                 <div class="item-primary">行銷企劃</div>
