--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SHENG-GANG HUANG - 履歷</title>
+    <title>SHENG-GANG HUANG</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -65,7 +65,7 @@
                 <div class="bg-gray-900 text-white p-8">
                     <div class="text-center mb-8">
                         <div class="w-32 h-32 rounded-full mx-auto mb-4 overflow-hidden">
-                            <img src="profile img.jpg" alt="大頭貼" class="w-full h-full object-cover">
+                            <img src="profile img.jpg" alt="大頭貼" class="w-full h-full object-contain object-position-top-8">
                         </div>
                         <h1 class="text-2xl font-bold mb-2">SHENG-GANG HUANG</h1>
                         <h1 class="text-2xl font-bold mb-4">小剛</h1>
