--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="bg-gray-900 text-white p-8">
                     <div class="text-center mb-8">
                         <div class="w-32 h-32 rounded-full mx-auto mb-4 overflow-hidden">
-                            <img src="profile img.jpg" alt="大頭貼" class="w-full h-full object-contain object-position-top-8">
+                            <img src="profile img.jpg" alt="大頭貼" class="w-full h-full object-cover" style="object-position: center 25%;">
                         </div>
                         <h1 class="text-2xl font-bold mb-2">SHENG-GANG HUANG</h1>
                         <h1 class="text-2xl font-bold mb-4">小剛</h1>
