--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                 <i class="fas fa-envelope"></i>
                                 <div>
                                     <div class="text-sm text-gray-300">Email</div>
-                                    <div class="text-sm">xiaogangtw@gmail.com</div>
+                                    <div class="text-sm">xiaogang.taiwan@gmail.com</div>
                                 </div>
                             </div>
                             <div class="personal-info-item">
